--- a/SiteA/css/siteA.css
+++ b/SiteA/css/siteA.css
@@ -1,1 +1,10 @@
-
+body {background-color: aquamarine}
+h1 {font-family: fantasy; }
+#StudioArt {background-color: plum}
+#Economics {background-color: darkseagreen}
+#Politics {background-color: lightgreen}
+#ComputerScience {background-image: url("https://vignette.wikia.nocookie.net/mlp-and-skylanders-twinverse/images/7/77/Spike_%28My_Little_Pony_Friendship_Is_Magic%29.png/revision/latest/scale-to-width-down/250?cb=20181207201032")}
+img{height: 100px; width: 100px; }
+table, th, td{border: 4px solid hotpink}
+#ComputerScience p{font-size: 40px; }
+#Mathematics {background-color: mediumpurple}
