--- a/SiteB/css/siteB.css
+++ b/SiteB/css/siteB.css
@@ -1,1 +1,22 @@
-
+body {background-color: black}
+h1 {font-family: sans-serif; }
+#landing h1{color: yellow}
+#StudioArt {background-image: url("https://i2.wp.com/media3.giphy.com/media/IMaxc56CAIfni/giphy.gif")}
+#StudioArt{color: orange}
+#ComputerScience {background-image: url("https://p0.pikrepo.com/preview/396/608/matrix-code.jpg")}
+img{height: 100px; width: 100px; }
+table, th, td{border: 4px solid hotpink}
+p{font-size: 40px;}
+p{font-family: monospace;}
+#ComputerScience {color: red}
+tr td{font-weight: bolder}
+#landing ul, #landing li{font-size: 20px; color: white;}
+#landing ul, #landing li, #landing a{color: yellow}
+#Economics{color: green}
+#Mathematics{color: cyan} 
+#Mathematics{background-image: url(https://media1.tenor.com/images/fb3f2d1e814190100a4ae401b1660d5b/tenor.gif)}
+#Politics{background-image: url(https://media2.giphy.com/media/l2JdTgeQzfPIvYeZO/giphy.gif)}
+#Economics{background-image: url(https://media3.giphy.com/media/11il9XRmW24Dni/giphy.gif)}
+#Economics{color: lawngreen}
+th,td{font-size: 30px}
+.department a{font-size: 20px; color: inherit}
